--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,2 +1,4 @@
 $background_header_top:#0481F6;
 $header_font: 'Open Sans Normal';
+$font_menu_header: 'Open Sans Condensed';
+$color_menu_header:black;
