--- a/public/css/app.css
+++ b/public/css/app.css
@@ -61,7 +61,7 @@ header .header-top ul li span {
 }
 
 nav {
-  padding: 20px 0;
+  height: 100px;
   border: 1px solid grey;
 }
 
@@ -74,6 +74,12 @@ nav .header-bottom .logo {
   width: 10%;
 }
 
+nav .header-bottom .logo img {
+  width: 80px;
+  display: inline-block;
+  padding: 10px 0;
+}
+
 nav .header-bottom .menu-header {
   width: 80%;
 }
@@ -82,26 +88,43 @@ nav .header-bottom .search-bar {
   width: 10%;
 }
 
-nav .header-bottom img {
-  width: 80px;
-  display: inline-block;
-}
-
 .menu-header ul {
   display: inline-block;
+  height: 100px;
+  text-align: center;
 }
 
 .menu-header ul li {
   margin: 0 15px;
-  padding-top: 20px;
 }
 
 .menu-header ul li a {
   display: inline-block;
-  font-family: "Open Sans Condensed";
   font-size: 17px;
   font-weight: 700;
   font-family: "Open Sans Condensed";
   color: black;
+  padding: 34px 0;
+  line-height: 1.5;
+}
+
+.menu-header ul li a.active,
+.menu-header ul li a:hover {
+  border-bottom: 7px solid blue;
+}
+
+.search-bar {
+  padding: 34px 0;
+}
+
+.search-bar input {
+  border: none;
+  border-bottom: 2px solid blue;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: right;
+  width: 120px;
+  font-family: "Open Sans Condensed";
 }
 
