finito jumbotron / card-container

--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -2,3 +2,4 @@ $background_header_top:#0481F6;
 $header_font: 'Open Sans Normal';
 $font_menu_header: 'Open Sans Condensed';
 $color_menu_header:black;
+$background_card_container:#1c1c1c;
