--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,19 +34,15 @@ li {
 header {
   background-color: #0481F6;
 }
-
 header .header-top ul {
   text-align: right;
 }
-
 header .header-top ul li {
   display: inline-block;
 }
-
 header .header-top ul li:last-child {
   margin-left: 50px;
 }
-
 header .header-top ul li a {
   display: inline-block;
   color: white;
@@ -55,7 +51,6 @@ header .header-top ul li a {
   font-size: 10px;
   font-weight: 600;
 }
-
 header .header-top ul li span {
   font-size: 14px;
 }
@@ -64,26 +59,21 @@ nav {
   height: 100px;
   border: 1px solid grey;
 }
-
 nav .header-bottom {
   display: flex;
   justify-content: center;
 }
-
 nav .header-bottom .logo {
   width: 10%;
 }
-
 nav .header-bottom .logo img {
   width: 80px;
   display: inline-block;
   padding: 10px 0;
 }
-
 nav .header-bottom .menu-header {
   width: 80%;
 }
-
 nav .header-bottom .search-bar {
   width: 10%;
 }
@@ -93,11 +83,9 @@ nav .header-bottom .search-bar {
   height: 100px;
   text-align: center;
 }
-
 .menu-header ul li {
   margin: 0 15px;
 }
-
 .menu-header ul li a {
   display: inline-block;
   font-size: 17px;
@@ -107,16 +95,13 @@ nav .header-bottom .search-bar {
   padding: 34px 0;
   line-height: 1.5;
 }
-
-.menu-header ul li a.active,
-.menu-header ul li a:hover {
+.menu-header ul li a.active, .menu-header ul li a:hover {
   border-bottom: 7px solid blue;
 }
 
 .search-bar {
   padding: 34px 0;
 }
-
 .search-bar input {
   border: none;
   border-bottom: 2px solid blue;
@@ -128,3 +113,47 @@ nav .header-bottom .search-bar {
   font-family: "Open Sans Condensed";
 }
 
+.jumbo {
+  height: 300px;
+  background-image: url("../img/jumbotron.jpg");
+  background-position-x: center;
+}
+
+.cards-container {
+  background-color: #1c1c1c;
+  padding-top: 40px;
+}
+
+.fumetti {
+  display: flex;
+  flex-wrap: wrap;
+  color: white;
+}
+.fumetti .cards {
+  width: 150px;
+  height: 200px;
+  margin: 0 15px;
+}
+.fumetti .cards .image-cards img {
+  width: 150px;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+}
+
+.button-cards {
+  display: flex;
+  justify-content: center;
+}
+.button-cards button {
+  background-color: #0481F6;
+  padding: 5px 45px;
+  border: none;
+}
+.button-cards button a {
+  color: white;
+  font-weight: bold;
+  font-family: "Open Sans Condensed";
+}
