--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,5 @@
 @import 'partials/_variables';
 @import 'partials/_general';
 @import 'partials/_header';
-@import 'partials/_footer';
+@import 'partials/_jumbo';
+@import 'partials/_cards'
