--- a/resources/sass/partials/_general.scss
+++ b/resources/sass/partials/_general.scss
@@ -4,6 +4,11 @@ padding:0;
 box-sizing: border-box;
 }
 
+@mixin flex-general{
+    display:flex;
+    flex-wrap: wrap;
+}
+
 header{
     font-family: $header_font;
 }
