--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,5 +1,13 @@
+// header
 $background_header_top:#0481F6;
-$header_font: 'Open Sans Normal';
 $font_menu_header: 'Open Sans Condensed';
 $color_menu_header:black;
+$header_font: 'Open Sans Normal';
+// footer
+$footer_font_normal: 'Open Sans Normal';
+$footer_font_condensed:'Open Sans Condensed';
+$color_link_footer:#959595;
+$color_link_hover_footer:#0282f9;
+$color_h1_footer:white;
+// card
 $background_card_container:#1c1c1c;
