--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,4 +2,5 @@
 @import 'partials/_general';
 @import 'partials/_header';
 @import 'partials/_jumbo';
-@import 'partials/_cards'
+@import 'partials/_cards';
+@import 'partials/_footer'
