--- a/resources/sass/partials/_cards.scss
+++ b/resources/sass/partials/_cards.scss
@@ -1,6 +1,7 @@
 .cards-container{
     background-color: $background_card_container;
     padding-top: 40px;
+    padding-bottom: 20px;
 }
 
 .fumetti{
