--- a/public/css/app.css
+++ b/public/css/app.css
@@ -167,38 +167,35 @@ footer {
   height: 380px;
 }
 
-.container {
-  max-width: 1100px;
-  margin: auto;
-}
-.container .footer {
+.container .footer-top {
   background-image: url("../img/dc-logo-bg.png");
   height: 380px;
   background-repeat: no-repeat;
   background-position: right;
   padding-top: 35px;
+  padding-left: 15px;
 }
-.container .footer .menu-footer {
+.container .footer-top .menu-footer {
   display: flex;
 }
-.container .footer .menu-footer .dc-comics, .container .footer .menu-footer .dc, .container .footer .menu-footer .sites {
+.container .footer-top .menu-footer .dc-comics, .container .footer-top .menu-footer .dc, .container .footer-top .menu-footer .sites {
   padding-right: 25px;
   padding-bottom: 20px;
 }
-.container .footer .menu-footer .dc-comics h1, .container .footer .menu-footer .dc h1, .container .footer .menu-footer .sites h1 {
+.container .footer-top .menu-footer .dc-comics h1, .container .footer-top .menu-footer .dc h1, .container .footer-top .menu-footer .sites h1 {
   color: white;
   font-size: 22px;
   font-weight: 600;
   font-family: "Open Sans Condensed";
   padding-bottom: 5px;
 }
-.container .footer .menu-footer .dc-comics ul li a, .container .footer .menu-footer .dc ul li a, .container .footer .menu-footer .sites ul li a {
+.container .footer-top .menu-footer .dc-comics ul li a, .container .footer-top .menu-footer .dc ul li a, .container .footer-top .menu-footer .sites ul li a {
   color: #959595;
   line-height: 1.5;
   font-size: 12px;
   font-family: "Open Sans Normal";
 }
-.container .footer .menu-footer .dc-comics ul li a:hover, .container .footer .menu-footer .dc ul li a:hover, .container .footer .menu-footer .sites ul li a:hover {
+.container .footer-top .menu-footer .dc-comics ul li a:hover, .container .footer-top .menu-footer .dc ul li a:hover, .container .footer-top .menu-footer .sites ul li a:hover {
   color: #0282f9;
 }
 
@@ -212,4 +209,46 @@ footer {
 }
 .copy-right p a {
   color: #0282f9;
+}
+
+.footer-bottom {
+  background-color: #303030;
+  height: 108px;
+}
+.footer-bottom .footer-container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+}
+.footer-bottom .footer-container input {
+  padding: 15px 15px;
+  border: 2px solid #0282f9;
+  background-color: #303030;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+.footer-bottom .footer-container input:hover {
+  background-color: #0282f9;
+  transition: 1s;
+}
+.footer-bottom .footer-container .social-icons h2 {
+  display: inline;
+  color: #0282f9;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Open Sans Condensed";
+  padding-right: 15px;
+}
+.footer-bottom .footer-container .social-icons ul {
+  display: inline-block;
+  padding-top: 10px;
+}
+.footer-bottom .footer-container .social-icons ul li {
+  display: inline-block;
+  padding-left: 12px;
+}
+.footer-bottom .footer-container .social-icons ul li a:hover {
+  opacity: 0.8;
+  transition: 1s;
 }
