--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -8,6 +8,6 @@ $footer_font_normal: 'Open Sans Normal';
 $footer_font_condensed:'Open Sans Condensed';
 $color_link_footer:#959595;
 $color_link_hover_footer:#0282f9;
-$color_h1_footer:white;
+$color_title_footer:white;
 // card
 $background_card_container:#1c1c1c;
