--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,4 +1,5 @@
 // header
+$color_primary:#0481F6;
 $background_header_top:#0481F6;
 $font_menu_header: 'Open Sans Condensed';
 $color_menu_header:black;
