--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,4 +3,5 @@
 @import 'partials/_header';
 @import 'partials/_jumbo';
 @import 'partials/_cards';
-@import 'partials/_footer'
+@import 'partials/_footer';
+@import 'partials/_pagina_dettaglio_fumetto'
