--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,5 +1,4 @@
 // header
-$color_primary:#0481F6;
 $background_header_top:#0481F6;
 $font_menu_header: 'Open Sans Condensed';
 $color_menu_header:black;
@@ -12,3 +11,7 @@ $color_link_hover_footer:#0282f9;
 $color_title_footer:white;
 // card
 $background_card_container:#1c1c1c;
+// general
+$color_primary:#0481F6;
+$font_primary:'Open Sans Normal';
+$font_secondary: 'Open Sans Condensed';
