--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,7 +1,7 @@
 // header
 $background_header_top:#0481F6;
 $font_menu_header: 'Open Sans Condensed';
-$color_menu_header:black;
+$color_menu_header:#464646;;
 $header_font: 'Open Sans Normal';
 // footer
 $footer_font_normal: 'Open Sans Normal';
