--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -83,6 +83,7 @@ nav {
 
 .search-bar{
     padding: 34px 0;
+    display: flex;
 
     input{
 
@@ -96,4 +97,15 @@ nav {
         font-family: $font_menu_header;
     }
 
+    .icona-lente{
+        i{
+            color: #222;
+            font-size: 18px;
+        }
+    }
+
+}
+
+.capitalize{
+    text-transform: capitalize;
 }
